funcion de costo terminada

--- a/reg_lineal.ipynb
+++ b/reg_lineal.ipynb
@@ -138,8 +138,7 @@
     "    # Puedes hacerlo directamente usando numpy \n",
     "    # loss = --aqui se inserta código--\n",
     "\n",
-    "    return loss\n",
-    "   hola hola hola hola prueba de git commit"
+    "    return loss"
    ]
   },
   {
