descenso gradientes lotes

--- a/reg_lineal.ipynb
+++ b/reg_lineal.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,8 +309,8 @@
     "        dw, db = grad_costo(x, y, w, b)\n",
     "        \n",
     "        # --aqui hay que poner código--        \n",
-    "        w -= None\n",
-    "        b -= None    \n",
+    "        w -= eta*dw\n",
+    "        b -= eta*db  \n",
     "        #------------------------------\n",
     "        \n",
     "        mse_iter[iter] = mse(x, y, w, b)\n",
